--- a/Mople/Info.plist
+++ b/Mople/Info.plist
@@ -30,6 +30,12 @@
 				<string>kakao72b95832d0237fce2c5c7eb82d4a6a7a</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array/>
+		</dict>
 	</array>
 	<key>KakaoKey</key>
 	<string>$(KAKAO_NATIVE_APP_KEY)</string>
@@ -57,7 +63,7 @@
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
-		<false/>
+		<true/>
 		<key>UISceneConfigurations</key>
 		<dict>
 			<key>UIWindowSceneSessionRoleApplication</key>
