--- a/Mople/Info.plist
+++ b/Mople/Info.plist
@@ -4,6 +4,10 @@
 <dict>
 	<key>ApiBaseURL</key>
 	<string>$(API_BASE_URL)</string>
+	<key>KakaoKey</key>
+	<string>$(KAKAO_NATIVE_APP_KEY)</string>
+	<key>NaverClientId</key>
+	<string>$(NAVER_CLIENT_ID)</string>
 	<key>CFBundleLocalizations</key>
 	<array>
 		<string>ko</string>
@@ -41,19 +45,17 @@
 			</array>
 		</dict>
 	</array>
-	<key>KakaoKey</key>
-	<string>$(KAKAO_NATIVE_APP_KEY)</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>kakaokompassauth</string>
+		<string>kakaomap</string>
+		<string>nmap</string>
 	</array>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
-	<key>NaverClientId</key>
-	<string>$(NAVER_CLIENT_ID)</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Pretendard-Black.ttf</string>
