--- a/Mople/Dev-Info.plist
+++ b/Mople/Dev-Info.plist
@@ -27,7 +27,7 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>kakao72b95832d0237fce2c5c7eb82d4a6a7a</string>
+				<string>kakao0fcc3c29ae8669444767451bb1e89e7e</string>
 			</array>
 		</dict>
 		<dict>
@@ -44,7 +44,7 @@
 	<key>FirebaseAutomaticScreenReportingEnabled</key>
 	<false/>
 	<key>KakaoKey</key>
-	<string>$(KAKAO_NATIVE_APP_KEY)</string>
+	<string>$(KAKAO_NATIVE_APP_DEV_KEY)</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>kakaokompassauth</string>
