fix: Remove tabBar.delegate assignment to prevent iOS 17.5 crash

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ fastlane/screenshots/**/*.png
 
 # Firebase 설정 파일 (개인별로 다름)
 GoogleService-Info.plist
+GoogleService-Dev-Info.plist
 
 # 시크릿 키 관리용 xcconfig
 Secrets.xcconfig
